[gd_scene load_steps=10 format=3 uid="uid://dyni6yd36bdnr"]

[ext_resource type="Script" path="res://scenes/level.gd" id="1_7imcq"]
[ext_resource type="Texture2D" uid="uid://dkgwfp6krmuye" path="res://assets/Free-Scrolling-City-Backgrounds-Pixel-Art3-1536x1024.webp" id="2_45olm"]
[ext_resource type="PackedScene" uid="uid://bsmkt02gupc8a" path="res://scenes/objects/coin_spawns.tscn" id="2_170cx"]
[ext_resource type="Script" path="res://scenes/LiveCoins.gd" id="2_as4fy"]
[ext_resource type="PackedScene" uid="uid://benatini8wq88" path="res://scenes/UI/counter.tscn" id="3_02jyj"]
[ext_resource type="PackedScene" uid="uid://b6qhiwuepd54y" path="res://scenes/UI/countdown_timer.tscn" id="6_evt5s"]
[ext_resource type="PackedScene" uid="uid://ceckt4iw3gjlg" path="res://scenes/UI/coin_pick_up_sfx.tscn" id="7_0udn3"]
[ext_resource type="AudioStream" uid="uid://bmeoqr23ru5vb" path="res://assets/explosion.wav" id="8_yhr0v"]
[ext_resource type="AudioStream" uid="uid://de2nuxxvwwmgh" path="res://assets/The great song.wav" id="9_jlsb7"]

[node name="Level" type="Node2D"]
script = ExtResource("1_7imcq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-106, -145)
scale = Vector2(1.78531, 1.8953)
texture = ExtResource("2_45olm")

[node name="LiveCoins" type="Node2D" parent="."]
script = ExtResource("2_as4fy")

[node name="CoinSpawns" parent="." instance=ExtResource("2_170cx")]
position = Vector2(0, 3)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.101
autostart = true

[node name="Counter" parent="." instance=ExtResource("3_02jyj")]

[node name="CountdownTimer" parent="." instance=ExtResource("6_evt5s")]
offset_left = 717.0
offset_top = 2.0
offset_right = 1134.0
offset_bottom = 244.0

[node name="CoinPickUpSFX" parent="." instance=ExtResource("7_0udn3")]

[node name="BadCoinSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_yhr0v")

[node name="BackgroundSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_jlsb7")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="out_of_time" from="CountdownTimer" to="." method="_on_countdown_timer_out_of_time"]
